<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.opengl.GLSurfaceView
        android:id="@+id/surfaceview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top" />

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="3dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/switch_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_background"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_gravity="right"
            android:text="@string/ar_mode"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/show_point_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_background"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_gravity="right"
            android:text="@string/show_point"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/show_plane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_background"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_gravity="right"
            android:text="@string/show_plane"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_background"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_gravity="right"
            android:text="@string/zoom_in"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_background"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_gravity="right"
            android:text="@string/zoom_out"
            android:textSize="16sp"/>
    </LinearLayout>

</RelativeLayout>
